--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,17 +4,37 @@ on:
     branches:
       - master
 jobs:
-  build:
-    name: Test,Build and Release web app
-    env:
-      my_secret: ${{secrets.TOKEN}}
+  build_web:
+    name: Build Flutter (Web)
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v1
-      - uses: subosito/flutter-action@v1
-        with:
+    - uses: actions/checkout@v1
+    - uses: subosito/flutter-action@v1
+      with:
           channel: 'dev'
-      - run: flutter config --enable-web
-      - run: flutter pub get
-      - run: flutter test  
-      - run: flutter build web --release
+    - run: flutter pub get
+    - run: flutter config --enable-web
+    - run: flutter build web
+    - name: Archive Production Artifact
+      uses: actions/upload-artifact@master
+      with:
+        name: web-build
+        path: build/web
+  deploy_web:
+    name: Deploy Web to Firebase Hosting
+    needs: build_web
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout Repo
+        uses: actions/checkout@master
+      - name: Download Artifact
+        uses: actions/download-artifact@master
+        with:
+          name: web-build
+      - name: Deploy to Firebase
+        uses: w9jds/firebase-action@master
+        with:
+          args: deploy --only hosting
+        env:
+          FIREBASE_TOKEN: ${{ secrets.FIREBASE_TOKEN }}
+          PROJECT_ID: default
