--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,8 +14,10 @@ dependencies:
   flutter:
     sdk: flutter
 
-
+  # for cupertino icons
   cupertino_icons: ^0.1.3
+  # for google fonts
+  google_fonts: ^1.1.0
 
 dev_dependencies:
   flutter_test:
