--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,8 @@ dependencies:
   flutter:
     sdk: flutter
 
+  # to auto size text in given space
+  auto_size_text: ^2.1.0
   # for cupertino icons
   cupertino_icons: ^0.1.3
   # for google fonts
