--- a/web/manifest.json
+++ b/web/manifest.json
@@ -2,7 +2,7 @@
   "name": "Dua",
   "short_name": "Dua",
   "theme_color": "#0d3b66",
-  "background_color": "#f4d35e",
+  "background_color": "#faf0ca",
   "display": "standalone",
   "orientation": "portrait",
   "Scope": "/",
