--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,8 +18,12 @@ dependencies:
   auto_size_text: ^2.1.0
   # for cupertino icons
   cupertino_icons: ^0.1.3
+  # state management
+  flutter_cubit: ^0.1.1
   # for google fonts
   google_fonts: ^1.1.0
+  # for web specific functionalities
+  universal_html: ^1.2.3
 
 dev_dependencies:
   flutter_test:
