--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,7 +19,9 @@ dependencies:
   # for cupertino icons
   cupertino_icons: ^0.1.3
   # state management
-  flutter_cubit: ^0.1.1
+  flutter_bloc: ^6.0.0-dev.1
+  # for cubit and bloc testing
+  bloc_test: ^7.0.0-dev.2
   # for google fonts
   google_fonts: ^1.1.0
   # for web specific functionalities
