--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,6 +22,8 @@ dependencies:
   flutter_bloc: ^6.0.0-dev.1
   # for cubit and bloc testing
   bloc_test: ^7.0.0-dev.2
+  # to equate two objects
+  equatable: ^1.2.2
   # for google fonts
   google_fonts: ^1.1.0
   # for web specific functionalities
