--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,9 +19,9 @@ dependencies:
   # for cupertino icons
   cupertino_icons: ^0.1.3
   # state management
-  flutter_bloc: ^6.0.0-dev.1
+  flutter_bloc: ^6.0.0
   # for cubit and bloc testing
-  bloc_test: ^7.0.0-dev.2
+  bloc_test: ^7.0.0
   # to equate two objects
   equatable: ^1.2.2
   # for google fonts
@@ -40,10 +40,9 @@ flutter:
 
   uses-material-design: true
 
-  # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  assets:
+    - assets/data/
+    - assets/flare/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
