--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,8 @@ dependencies:
   auto_size_text: ^2.1.0
   # for cupertino icons
   cupertino_icons: ^0.1.3
+  # for flare animation
+  flare_flutter: ^2.0.6
   # state management
   flutter_bloc: ^6.0.0
   # for cubit and bloc testing
